Bug 932669 - Expose sensor rotation offset to JS. r=dhylands