dom/camera/FallbackCameraControl.cpp
@@ -24,6 +24,7 @@ public:
   const char* GetParameter(const char* aKey);
   const char* GetParameterConstChar(uint32_t aKey);
   double GetParameterDouble(uint32_t aKey);
+  int32_t GetParameterInt32(uint32_t aKey);
   void GetParameter(uint32_t aKey, nsTArray<idl::CameraRegion>& aRegions);
   void GetParameter(uint32_t aKey, idl::CameraSize& aSize);
   void SetParameter(const char* aKey, const char* aValue);
@@ -99,6 +100,12 @@ double
 nsFallbackCameraControl::GetParameterDouble(uint32_t aKey)
 {
   return NAN;
+}
+
+int32_t
+nsFallbackCameraControl::GetParameterInt32(uint32_t aKey)
+{
+  return 0;
 }
 
 void
